	- Return s instead of NULL only when we have a control key, a
	  prinary meta key sequence, or both. (DLR)
  get_toggle()
	- Add a debug message. (DLR)
  bottombars()
	- Initialize foo, in case a keystroke meets none of the handled
	  cases. (DLR)
  total_refresh()
	- Refresh bottomwin using the value of currshortcut, and change
	  the code around do_refresh() calls to accommodate this. (DLR)
- configure.ac:
	- Remove specific references to control key shortcuts. (DLR)
	- Check for the wide version of ncurses, without which multibyte
	  strings don't seem to be displayed properly, and associated
	  wide character functions. (DLR)
	- Check for wchar.h, for those systems that need it for the
	  wcwidth() prototype. (DLR)
	- Remove checks for all include files that we include
	  unconditionally. (DLR)
	- Remove references to termio.h here and elsewhere, since it's
	  obsolete and it defines a struct termio that we don't use
	  anywhere. (DLR)
	- Typo fixes. (DLR)
	- Add checks for isascii(), iswalnum(), iswblank() or
	  iswspace(), mblen(), and wctype.h. (DLR)
- doc/faq.html:
	- Remove now-inaccurate note about verbatim input's not working
	  at prompts, and update its description to mention that it
	  handles hexadecimal values now. (DLR)
	- Add question about opening files with names beginning with
	  '+'s, and add a few more miscellaneous cosmetic fixes.
- nanorc.sample:
	- Add return to the "c-file" regexes. (DLR)
	- Clarify the text describing good values for whitespace
	  display.  Since ASCII is technically only seven bits wide,
	  characters 128-255 aren't ASCII. (DLR, suggested by Michael
	  Piefel)
	- Add the "morespace" option. (DLR)
	- Add support for characters to the "c-file" regexes. (DLR)
	- Add the hexadecimal equivalents of the decimal values
	  suggested for whitespace display, now that it can handle
	  multibyte characters. (DLR)
	- Add "manpage" regex. (Mike Frysinger, minor tweaks by DLR)
- nano.1. nanorc.5, nano.texi: